Real time graph and thank page

--- a/Thank.html
+++ b/Thank.html
@@ -112,11 +112,11 @@
     <!-- HTML -->
     <div class="container">
         <div class="row">
-            <span class="text1">Welcome to Our App!</span>
-            <span class="text2">Digital Filter Designer</span>
+            <span class="text1">Wish You Enjoyed the App!</span>
+            <span class="text2">Group 19</span>
         </div>
     </div>
-    <button class="btnhomepage" id="btn-1" onclick="location.href='./index.html'">Go to App</button>
+    <button class="btnhomepage" id="btn-1" onclick="location.href='./index.html'">Back to App</button>
     
 
 </body>
